--- a/Resources/Prototypes/SS220/Entities/Structures/Furniture/tacmap.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/Furniture/tacmap.yml
@@ -41,6 +41,60 @@
       !type:TabletopTacmapSetup
       boardPrototype: FrankensteinTabletop
 
+- type: entity
+  id: NoxTacmap
+  name: huge tactical map
+  parent: FrankensteinTacmap
+  placement:
+    mode: SnapgridCenter
+  components:
+    - type: Sprite
+      layers:
+      - state: map_nox
+    - type: TabletopGame
+      boardName: tabletop-nox-tacmap
+      size: 678,591
+      windowSize: 855,770
+      setup:
+        !type:TabletopTacmapSetup
+        boardPrototype: NoxTabletop
+
+- type: entity
+  id: AxiomaTacmap
+  name: huge tactical map
+  parent: FrankensteinTacmap
+  placement:
+    mode: SnapgridCenter
+  components:
+    - type: Sprite
+      layers:
+      - state: map_axioma
+    - type: TabletopGame
+      boardName: tabletop-axioma-tacmap
+      size: 678,591
+      windowSize: 855,770
+      setup:
+        !type:TabletopTacmapSetup
+        boardPrototype: AxiomaTabletop
+
+- type: entity
+  id: EclipseTacmap
+  name: huge tactical map
+  parent: FrankensteinTacmap
+  placement:
+    mode: SnapgridCenter
+  components:
+    - type: Sprite
+      layers:
+      - state: map_eclipse
+    - type: TabletopGame
+      boardName: tabletop-eclipse-tacmap
+      size: 678,591
+      windowSize: 855,770
+      setup:
+        !type:TabletopTacmapSetup
+        boardPrototype: EclipseTabletop
+
 # Background entity
 - type: entity
   parent: BaseBoardTabletop
@@ -51,6 +105,42 @@
   - type: Sprite
     sprite: SS220/Objects/Misc/sec_tacmap_tabletop.rsi
     state: tabletop
+    noRot: false
+    drawdepth: FloorTiles
+
+- type: entity
+  parent: BaseBoardTabletop
+  id: AxiomaTabletop
+  name: axioma map
+  noSpawn: true
+  components:
+  - type: Sprite
+    sprite: SS220/Objects/Misc/sec_tacmap_tabletop.rsi
+    state: tabletop_axioma
+    noRot: false
+    drawdepth: FloorTiles
+
+- type: entity
+  parent: BaseBoardTabletop
+  id: NoxTabletop
+  name: nox map
+  noSpawn: true
+  components:
+  - type: Sprite
+    sprite: SS220/Objects/Misc/sec_tacmap_tabletop.rsi
+    state: tabletop_nox
+    noRot: false
+    drawdepth: FloorTiles
+
+- type: entity
+  parent: BaseBoardTabletop
+  id: EclipseTabletop
+  name: eclipse map
+  noSpawn: true
+  components:
+  - type: Sprite
+    sprite: SS220/Objects/Misc/sec_tacmap_tabletop.rsi
+    state: tabletop_eclipse
     noRot: false
     drawdepth: FloorTiles
 
@@ -190,7 +280,7 @@
   components:
   - type: Sprite
     state: flag_c
-    
+
 - type: entity
   parent: ToyFigurineTacmapBase
   id: ToyFigurineFlagDTabletop
