--- a/Resources/Prototypes/SS220/Entities/Objects/Misc/spider_web.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Misc/spider_web.yml
@@ -38,12 +38,12 @@
       fixtures:
         fix1:
           hard: false
-          density: 7
+          density: 1000
           shape:
             !type:PhysShapeAabb
             bounds: "-0.5,-0.5,0.5,0.5"
-          layer:
-          - MidImpassable
+          mask:
+          - ItemMask
     - type: Damageable
       damageModifierSet: Wood
     - type: Destructible
@@ -99,6 +99,7 @@
     snap:
       - Wall
   components:
+
     - type: Destructible
       thresholds:
       - trigger:
