--- a/Resources/Prototypes/ai_factions.yml
+++ b/Resources/Prototypes/ai_factions.yml
@@ -7,6 +7,7 @@
     - PetsNT
     - Zombie
     - Revolutionary
+    - SpiderQueen #ss220 spider queen
 
 - type: npcFaction
   id: NanoTrasen
@@ -16,6 +17,7 @@
   - Xeno
   - Zombie
   - Revolutionary
+  - SpiderQueen #ss220 spider queen
 
 - type: npcFaction
   id: Mouse
@@ -32,6 +34,7 @@
   - SimpleHostile
   - Zombie
   - Xeno
+  - SpiderQueen #ss220 spider queen
 
 - type: npcFaction
   id: SimpleHostile
@@ -42,6 +45,7 @@
   - PetsNT
   - Zombie
   - Revolutionary
+  - SpiderQueen #ss220 spider queen
 
 - type: npcFaction
   id: SimpleNeutral
@@ -54,6 +58,7 @@
   - Xeno
   - PetsNT
   - Zombie
+  - SpiderQueen #ss220 spider queen
 
 - type: npcFaction
   id: Xeno
@@ -64,6 +69,7 @@
   - PetsNT
   - Zombie
   - Revolutionary
+  - SpiderQueen #ss220 spider queen
 
 - type: npcFaction
   id: Zombie
@@ -75,6 +81,7 @@
   - Passive
   - PetsNT
   - Revolutionary
+  - SpiderQueen #ss220 spider queen
 
 # SS220 AI Mapping Update Begin
 
@@ -87,6 +94,7 @@
   - PetsNT
   - Zombie
   - Revolutionary
+  - SpiderQueen
 
 # SS220 AI Mapping Update End
 
@@ -97,6 +105,7 @@
   - Zombie
   - SimpleHostile
   - Dragon
+  - SpiderQueen
 
 # ss220 reaper passive start
 
@@ -104,3 +113,30 @@
   id: DarkReaperPassive
 
 # ss220 reaper passive end
+
+# ss220 spider queen Begin
+
+- type: npcFaction
+  id: SpiderQueen
+  hostile:
+  - NanoTrasen
+  - Syndicate
+  - Passive
+  - Zombie
+  - SimpleHostile
+  - Dragon
+  - PetsNT
+  - SimpleNeutral
+  - SimpleHostile
+
+- type: npcFaction
+  id: SpiderHostile
+  hostile:
+  - NanoTrasen
+  - Syndicate
+  - Passive
+  - PetsNT
+  - Zombie
+  - Revolutionary
+
+# ss220 spider queen end
