--- a/Resources/Prototypes/SS220/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Head/hats.yml
@@ -131,11 +131,28 @@
   - type: Tag
     tags:
     - Ian
-    - WhitelistChameleon #SS220-pr: FIX CLOTHING TAGS 
-    - ClothMade #SS220-pr: FIX CLOTHING TAGS 
+    - WhitelistChameleon #SS220-pr: FIX CLOTHING TAGS
+    - ClothMade #SS220-pr: FIX CLOTHING TAGS
 
 # Сервис
 
+  # Ведущий сервисник
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatSeniorService
+  name: фуражка ведущего сервисного отдела
+  description: Большая, стильная голова
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/seniorsercap.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/seniorsercap.rsi
+  - type: Tag
+    tags:
+    - ClothMade
+    - Ian # SS220 Shapochki
+    - HamsterWearable
+    - WhitelistChameleon
   # Ботаника
 - type: entity
   parent: ClothingHeadHeadHatBaseFlippable
@@ -203,7 +220,40 @@
     - HamsterWearable
     - WhitelistChameleon
 
+  # Уборщик
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatOrangeJanitor
+  name: оранжевая каска
+  description: Окрашенная в оранжевый цвет каска.
+  suffix: Не маппить
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/orangejanitor.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/orangejanitor.rsi
+  - type: Tag
+    tags:
+    - HamsterWearable
+    - WhitelistChameleon
+
+
 # Служба безопасности
+
+  # ГСБ
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadBigCapHoS
+  name: фуражка главы службы безопасности
+  description: Дайте капитану новую голубую фуражку, ведь старая почернела во время стирки.
+  components:
+    - type: Sprite
+      sprite: SS220/Clothing/Head/Hats/hosbigcap.rsi
+    - type: Clothing
+      sprite: SS220/Clothing/Head/Hats/hosbigcap.rsi
+
 
   # Пилот
 - type: entity
@@ -216,6 +266,22 @@
     sprite: SS220/Clothing/Head/Hats/pilot_capcap.rsi
   - type: Clothing
     sprite: SS220/Clothing/Head/Hats/pilot_capcap.rsi
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatPilotBeret
+  name: берет лётчика
+  description: Берет с наушниками... Чтоб уши грели.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/beret_pilot.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/beret_pilot.rsi
+  - type: Tag
+    tags:
+    - ClothMade
+    - HamsterWearable
+    - WhitelistChameleon
 
 # Карго
   # Квартирмейстер
@@ -267,3 +333,31 @@
     - type: Sprite
       sprite: SS220/Clothing/Head/Hats/druid_tiara.rsi
     - type: Clothing
+
+# OTHER
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatMoryak
+  name: moryak beret
+  description: Beret with a orange tampon.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/moryak.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/moryak.rsi
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatMagicianHat
+  name: шляпа магички
+  description: Головной убор настоящего клептомана.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/magicianshat.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/magicianshat.rsi
+  - type: Tag
+    tags:
+     - WhitelistChameleon
+     - MagicianHat
