--- a/Resources/Prototypes/SS220/Entities/Clothing/Head/hoods.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Head/hoods.yml
@@ -1,3 +1,5 @@
+# © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
+
 - type: entity
   parent: ClothingHeadHatHoodWinterBase
   id: ClothingHeadHatHoodWinterCentcomm
@@ -9,3 +11,26 @@
     sprite: SS220/Clothing/Head/Hoods/Coat/hoodcentcom.rsi
   - type: Clothing
     sprite: SS220/Clothing/Head/Hoods/Coat/hoodcentcom.rsi
+
+#Экзокостюм утилизаторов - капюшон
+
+- type: entity
+  parent: ClothingHeadHatHoodWinterBase
+  id: ClothingHeadHatHoodExosuitSalvage
+  categories: [ HideSpawnMenu ]
+  name: капюшон экзокостюма утилизатора
+  description: Капюшон из крепкой ткани, обеспечивающий небольшую защиту.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hoods/salvage_exosuit.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hoods/salvage_exosuit.rsi
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.95
+        Slash: 0.95
+        Piercing: 0.95
+  - type: Tag
+    tags:
+    - HidesHair
