--- a/Resources/Prototypes/SS220/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Head/hats.yml
@@ -153,7 +153,117 @@
     - Ian # SS220 Shapochki
     - HamsterWearable
     - WhitelistChameleon
+
+  # Повар
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatChefWhite
+  name: белый поварской колпак
+  description: Это колпак, который повара используют, чтобы волосы не попадали в еду. Судя по еде, они не работают.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/Chef/chef_white.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/Chef/chef_white.rsi
+  - type: Storage
+    grid:
+    - 0,0,0,0
+  - type: UserInterface
+    interfaces:
+      enum.StorageUiKey.Key:
+        type: StorageBoundUserInterface
+  - type: ContainerContainer
+    containers:
+      storagebase: !type:Container
+  - type: Tag
+    tags:
+    - ClothMade
+    - HamsterWearable
+    - WhitelistChameleon
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatChefGreen
+  name: зелёный поварской колпак
+  description: Это колпак, который повара используют, чтобы волосы не попадали в еду. Судя по еде, они не работают.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/Chef/chef_green.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/Chef/chef_green.rsi
+  - type: Storage
+    grid:
+    - 0,0,0,0
+  - type: UserInterface
+    interfaces:
+      enum.StorageUiKey.Key:
+        type: StorageBoundUserInterface
+  - type: ContainerContainer
+    containers:
+      storagebase: !type:Container
+  - type: Tag
+    tags:
+    - ClothMade
+    - HamsterWearable
+    - WhitelistChameleon
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatChefBlack
+  name: чёрный поварской колпак
+  description: Это колпак, который повара используют, чтобы волосы не попадали в еду. Судя по еде, они не работают.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/Chef/chef_black.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/Chef/chef_black.rsi
+  - type: Storage
+    grid:
+    - 0,0,0,0
+  - type: UserInterface
+    interfaces:
+      enum.StorageUiKey.Key:
+        type: StorageBoundUserInterface
+  - type: ContainerContainer
+    containers:
+      storagebase: !type:Container
+  - type: Tag
+    tags:
+    - ClothMade
+    - HamsterWearable
+    - WhitelistChameleon
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatChefNanotrasen
+  name: синий поварской колпак
+  description: Владелец этого колпака точно не допустит, чтобы его волосы попали в чужую еду. Судя по еде, так и есть.
+  suffix: Не маппить, Сеньор
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/Chef/chef_nt.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/Chef/chef_nt.rsi
+  - type: Storage
+    grid:
+    - 0,0,0,0
+  - type: UserInterface
+    interfaces:
+      enum.StorageUiKey.Key:
+        type: StorageBoundUserInterface
+  - type: ContainerContainer
+    containers:
+      storagebase: !type:Container
+  - type: Tag
+    tags:
+    - ClothMade
+    - HamsterWearable
+    - WhitelistChameleon
+
+
   # Ботаника
+
 - type: entity
   parent: ClothingHeadHeadHatBaseFlippable
   id: ClothingHeadHatTruckerBlue
@@ -334,6 +444,34 @@
       sprite: SS220/Clothing/Head/Hats/druid_tiara.rsi
     - type: Clothing
 
+# Инженерия
+
+  # Старший инженер
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatBeretCE
+  name: chief engineer beret
+  description: The white beret is specially for the Chief Engineer.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/beret_ce.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/beret_ce.rsi
+  - type: Tag
+    tags:
+    - ClothMade
+    - Ian
+    - HamsterWearable
+    - WhitelistChameleon
+  - type: SpecialSounds
+  - type: Vocal
+    sounds:
+      Male: MaleEngineer
+      Female: FemaleEngineer
+      Unsexed: MaleEngineer
+
+
 # OTHER
 
 - type: entity
@@ -361,3 +499,95 @@
     tags:
      - WhitelistChameleon
      - MagicianHat
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingSFlowerhead
+  name: венок из космических ромашек
+  description: Лёгкий и нежный цветочный оберег.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/sflowerhead.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/sflowerhead.rsi
+  - type: Construction
+    graph: Clothingsflowerhead
+    node: ClothingSFlowerhead
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingWSFlowerhead
+  name: венок из белых космических ромашек
+  description: Лёгкий и нежный цветочный оберег.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/wsflowerhead.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/wsflowerhead.rsi
+  - type: Construction
+    graph: Clothingwsflowerhead
+    node: ClothingWSFlowerhead
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatBeretBard #SS220 bard loadout
+  name: beret with feather
+  description: Will add atmosphere!
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/beret_bard.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/beret_bard.rsi
+
+- type: entity
+  parent: ClothingHeadHatHoodWinterBase
+  id: ClothingHeadHatFloppa
+  name: шлёпафон
+  description: Шлёпашон
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/FloppaHat.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/FloppaHat.rsi
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadYsatyu
+  name: ysatyu cap
+  description: Moonshine craftsman's cap.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/ysatyu.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/ysatyu.rsi
+
+
+# SPONSOR (возможно, в душе не ебу)
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatDevilHorns
+  name: devil's horns
+  description: Now you look like hell.
+  suffix: DO NOT MAP
+  components:
+  - type: Tag
+    tags: [] # ignore "WhitelistChameleon" tag
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/devils_horns.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/devils_horns.rsi
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatDevilHornsAlt
+  name: devil's horns
+  description: Now you look like hell.
+  suffix: DO NOT MAP, without a tail
+  components:
+  - type: Tag
+    tags: [] # ignore "WhitelistChameleon" tag
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/devils_horns-alt.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/devils_horns-alt.rsi
