--- a/Resources/Prototypes/SS220/Entities/Clothing/Head/helmets.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Head/helmets.yml
@@ -1,4 +1,5 @@
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
+
 - type: entity
   parent: ClothingHeadHelmetBasic
   id: ClothingHeadHelmetTactical
@@ -9,3 +10,26 @@
     sprite: SS220/Clothing/Head/Helmets/opscore.rsi
   - type: Clothing
     sprite: SS220/Clothing/Head/Helmets/opscore.rsi
+
+#Military Police Helmet #by MIXnikita for SS200
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHelmetMpolice
+  name: Military Police helmet
+  description: this is a reliable protection for detention.
+  components:
+  - type: Sprite
+    sprite: Clothing/Head/Helmets/mpolice.rsi
+  - type: Clothing
+    sprite: Clothing/Head/Helmets/mpolice.rsi
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.80
+        Slash: 0.80
+        Piercing: 0.80
+        Heat: 0.80
+        Radiation: 0.80
+        Caustic: 0.95
+  - type: ExplosionResistance
+    damageCoefficient: 0.75
