--- a/Resources/Prototypes/SS220/Entities/Clothing/Head/hoods.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Head/hoods.yml
@@ -34,3 +34,46 @@
   - type: Tag
     tags:
     - HidesHair
+
+- type: entity
+  parent: ClothingHeadHatHoodBioGeneral
+  id: ClothingHeadHatHoodBioChemistry
+  name: bio hood
+  suffix: Chemistry
+  description: An advanced hood for chemistry officers that protects the head and face from biological contaminants.
+  components:
+  - type: IdentityBlocker
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hoods/Bio/chemistry.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hoods/Bio/chemistry.rsi
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatHoodChaplainHoodWhite
+  categories: [ HideSpawnMenu ]
+  name: chaplain's white hood
+  description: Maximum piety in this star system.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hoods/chaplainwhite.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hoods/chaplainwhite.rsi
+  - type: Tag
+    tags:
+    - HamsterWearable
+    - WhitelistChameleon
+  - type: HideLayerClothing
+    slots:
+    - Hair
+
+- type: entity
+  parent: ClothingHeadHatHoodWinterBase
+  id: ClothingHeadHatHoodHeartFinaly
+  name: сердечный капюшон
+  description: Капюшон.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Head/Hats/HeartHood.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Head/Hats/HeartHood.rsi
