--- a/Resources/Prototypes/SS220/Entities/Clothing/Shoes/specific.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Shoes/specific.yml
@@ -1,3 +1,29 @@
+# © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
+
+#Military Police Shoes #by MIXnikita for SS200
+- type: entity
+  parent: ClothingShoesBaseButcherable
+  id: ClothingShoesMpolice
+  name: military police shoes
+  description: they go to detention in these shoes.
+  components:
+  - type: Sprite
+    sprite: Clothing/Shoes/Specific/mboots.rsi
+  - type: Clothing
+    sprite: Clothing/Shoes/Specific/mboots.rsi
+
+- type: entity
+  parent: ClothingShoesGaloshes
+  id: ClothingShoesOrangeGaloshes
+  name: оранжевые галоши
+  description: Оранжевые резиновые ботинки.
+  suffix: Не маппить
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Shoes/Boots/orangejanitor.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Shoes/Boots/orangejanitor.rsi
+
 - type: entity
   parent: ClothingShoesBaseButcherable
   id: ClothingFootWraps
