--- a/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/clothing.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/clothing.yml
@@ -362,7 +362,7 @@
   parent: ClothingNeckBase
   id: ClothingNeckCloakHeadDevelopment
   name: плащ ведающего командования
-  description: Особый плащ, подчеркивающий статус носителя в великой и страшной группировке development. Именно это существо, именно с этим плащем ответственно за все ваши невзгоды.
+  description: Особый плащ, подчеркивающий статус носителя в великой и страшной группировке development. Именно эти существа, именно с этим плащем ответственны за все ваши невзгоды.
   suffix: Sponsor # Награда ведущих разработчиков
   components:
   - type: Sprite
