--- a/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/clothing.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/clothing.yml
@@ -361,7 +361,7 @@
 - type: entity
   parent: ClothingNeckBase
   id: ClothingNeckCloakHeadDevelopment
-  name: плащ ведающего командования
+  name: плащ ведающего созидания
     description: Особенный плащ, принадлежащий сущности, которой приписывают  власть над самим мирозданием. 
   suffix: Sponsor # Награда ведущих разработчиков
   components:
