--- a/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/clothing.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/clothing.yml
@@ -362,7 +362,7 @@
   parent: ClothingNeckBase
   id: ClothingNeckCloakHeadDevelopment
   name: плащ ведающего созидания
-    description: Особый плащ, принадлежащий сущности, которой приписывают власть над самим мирозданием.
+  description: Особый плащ, принадлежащий сущности, которой предписывают власть над самим мирозданием.
   suffix: Sponsor # Награда ведущих разработчиков
   components:
   - type: Sprite
