--- a/Resources/Prototypes/SS220/Entities/Sponsor/items.yml
+++ b/Resources/Prototypes/SS220/Entities/Sponsor/items.yml
@@ -149,78 +149,79 @@
     sound:
       path: /Audio/Effects/unwrap.ogg
 
-- type: entity
-  parent: BaseItem
-  id: SponsorElWycco
-  suffix: Шлёпа
-  name: Максон
-  description: КРИЧИ! КРИЧИ КАК СУЧЕЧКА!
-  components:
-  - type: UseDelay
-    delay: 1.0
-  - type: MeleeWeapon
-    wideAnimationRotation: 180
-    soundHit:
-      path: /Audio/Items/Toys/weh.ogg
-    damage:
-      types:
-        Blunt: 0
-  - type: Sprite
-    sprite: SS220/Objects/Sponsor/elwycco.rsi
-    layers:
-    - state: icon
-    - state: axe
-      map: ["axe"]
-      sprite: SS220/Objects/Sponsor/elwycco.rsi
-  - type: ContainerContainer
-    containers:
-      item: !type:ContainerSlot
-  - type: ItemSlots
-    slots:
-      item:
-        name: Топорик
-        whitelist:
-          tags:
-          - ElWyccoAxe
-  - type: ContainerFill
-    containers:
-      item:
-      - SponsorElWyccoAxe
-  - type: EmitSoundOnUse
-    sound:
-      path: /Audio/Items/Toys/weh.ogg
-  - type: EmitSoundOnLand
-    sound:
-      path: /Audio/Items/Toys/weh.ogg
-  - type: EmitSoundOnActivate
-    sound:
-      path: /Audio/Items/Toys/weh.ogg
-  - type: PhysicalComposition
-    materialComposition:
-      Cloth: 100
-  - type: StaticPrice
-    price: 5
-
-- type: entity
-  parent: BaseKnife
-  id: SponsorElWyccoAxe
-  suffix: Шлёпа
-  name: микро топор
-  description: Мини топор для мини игрушки.
-  components:
-  - type: Tag
-    tags:
-    - ElWyccoAxe
-  - type: MeleeWeapon
-    wideAnimationRotation: -135
-    damage:
-      types:
-        Slash: 0.1
-  - type: Sprite
-    sprite: SS220/Objects/Sponsor/elwycco.rsi
-    state: axe_icon
-  - type: Item
-    size: Tiny
+# Я насрал
+#- type: entity
+#  parent: BaseItem
+#  id: SponsorElWycco
+#  suffix: Шлёпа
+#  name: Максон
+#  description: КРИЧИ! КРИЧИ КАК СУЧЕЧКА!
+#  components:
+#  - type: UseDelay
+#    delay: 1.0
+#  - type: MeleeWeapon
+#    wideAnimationRotation: 180
+#    soundHit:
+#      path: /Audio/Items/Toys/weh.ogg
+#    damage:
+#      types:
+#        Blunt: 0
+#  - type: Sprite
+#    sprite: SS220/Objects/Sponsor/elwycco.rsi
+#    layers:
+#    - state: icon
+#    - state: axe
+#      map: ["axe"]
+#      sprite: SS220/Objects/Sponsor/elwycco.rsi
+#  - type: ContainerContainer
+#    containers:
+#      item: !type:ContainerSlot
+#  - type: ItemSlots
+#    slots:
+#      item:
+#        name: Топорик
+#        whitelist:
+#          tags:
+#          - ElWyccoAxe
+#  - type: ContainerFill
+#    containers:
+#      item:
+#      - SponsorElWyccoAxe
+#  - type: EmitSoundOnUse
+#    sound:
+#      path: /Audio/Items/Toys/weh.ogg
+#  - type: EmitSoundOnLand
+#    sound:
+#      path: /Audio/Items/Toys/weh.ogg
+#  - type: EmitSoundOnActivate
+#    sound:
+#      path: /Audio/Items/Toys/weh.ogg
+#  - type: PhysicalComposition
+#    materialComposition:
+#      Cloth: 100
+#  - type: StaticPrice
+#    price: 5
+#
+#- type: entity
+#  parent: BaseKnife
+#  id: SponsorElWyccoAxe
+#  suffix: Шлёпа
+#  name: микро топор
+#  description: Мини топор для мини игрушки.
+#  components:
+#  - type: Tag
+#    tags:
+#    - ElWyccoAxe
+#  - type: MeleeWeapon
+#    wideAnimationRotation: -135
+#    damage:
+#      types:
+#        Slash: 0.1
+#  - type: Sprite
+#    sprite: SS220/Objects/Sponsor/elwycco.rsi
+#    state: axe_icon
+#  - type: Item
+#    size: Tiny
 
 # Наборы
 
@@ -367,10 +368,10 @@
 
 - type: entity
   parent: BasePlushie
-  id: ElWycc
+  id: SponsorElWycc
   suffix: Шлёпа
-  name: Wycc
-  description: УБИВАЙ!!
+  name: Максон
+  description: КРИЧИ! КРИЧИ КАК СУЧЕЧКА!
   components:
   - type: Sprite
     sprite: SS220/Objects/Sponsor/wycc_overlay.rsi
@@ -421,7 +422,7 @@
   parent: BaseKnife
   id: SponsorElWyccAxe
   suffix: Шлёпа
-  name: wycc axe
+  name: мини топорик
   description: Мини топор для мини игрушки.
   components:
   - type: Sprite
@@ -431,7 +432,9 @@
     wideAnimationRotation: -135
     damage:
       types:
-        Slash: 0.1
+        Stamina: 1
+    soundHit:
+      path: /Audio/Items/Toys/mousesqueek.ogg
     state: icon
   - type: Item
     size: Tiny
