--- a/Resources/Prototypes/SS220/Roles/play_time_trackers.yml
+++ b/Resources/Prototypes/SS220/Roles/play_time_trackers.yml
@@ -23,6 +23,9 @@
   id: JobSeniorOfficer
 
 - type: playTimeTracker
+  id: JobSecurityClown
+
+- type: playTimeTracker
   id: JobSeniorPhysician
 
 - type: playTimeTracker
